// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`console > function fatal("just message") 1`] = `
"[31m[39m
[31m[39m
[31m[41m[30m ERROR [39m[31m[49m just message[39m
[31m[39m
[31m[39m
"
`;

exports[`console > function fatal("message with array-diff") 1`] = `
"[31m[39m
[31m[39m
[31m[41m[30m ERROR [39m[31m[49m message with array-diff[39m
[31m[39m
[31m[39m[1mExpected:[22m
[1m[22m
[1m[22m[
  1,
  2,
  3
]
[1mReceived:[22m
[1m[22m
[1m[22m[
  1,
  2,
  4
]
[1mDifference:[22m
[1m[22m
[1m[22m [
   ...
   ...
[31m-  3[39m
[32m+  4[39m
 ]

"
`;

exports[`console > function fatal("message with buffer-diff") 1`] = `
"[31m[39m
[31m[39m
[31m[41m[30m ERROR [39m[31m[49m message with buffer-diff[39m
[31m[39m
[31m[39m[1mDifference:[22m
[1m[22m
[1m[22m {
[31m-  0: 49[39m
[32m+  0: 52[39m
[31m-  1: 50[39m
[32m+  1: 53[39m
[31m-  2: 51[39m
[32m+  2: 54[39m
 }

"
`;

exports[`console > function fatal("message with details") 1`] = `
"[31m[39m
[31m[39m
[31m[41m[30m ERROR [39m[31m[49m message with details[39m
[31m[39m
[31m[39m[1mDetails:[22m
[1m[22m
[1m[22m123

"
`;

exports[`console > function fatal("message with diff and details") 1`] = `
"[31m[39m
[31m[39m
[31m[41m[30m ERROR [39m[31m[49m message with diff and details[39m
[31m[39m
[31m[39m[1mExpected:[22m
[1m[22m
[1m[22m[
  1
]
[1mReceived:[22m
[1m[22m
[1m[22m[
  2
]
[1ma:[22m
[1m[22m
[1m[22m1
[1mb:[22m
[1m[22m
[1m[22m2
[1mDifference:[22m
[1m[22m
[1m[22m [
[31m-  1[39m
[32m+  2[39m
 ]

"
`;
